<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/bookListFragment"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_books" />
    
    <item
        android:id="@+id/quizListFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/nav_quizzes" />
    
    <item
        android:id="@+id/leaderboardFragment"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/nav_leaderboard" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
